fix:서비스 소개 -> 랭킹(or 프로필), header z-index 100으로 변경 Feat: 프로젝트 상세페이지에서 userid와 로그인(localStorage.userId)ID가 같으면 수정 및 삭제 버튼 활성화, ProjectEdit.tsx 생성

--- a/src/Components/Layout/Header/header.css
+++ b/src/Components/Layout/Header/header.css
@@ -3,7 +3,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  z-index: 10000;
+  z-index: 100;
 }
 
 .h__logo__img {
