--- a/src/pages/Projects/ProjectDetails.css
+++ b/src/pages/Projects/ProjectDetails.css
@@ -126,13 +126,29 @@ ul {
   letter-spacing: -0.004em;
 }
 
+.projectDetails__descriptionInfoWrapper {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 3px solid #f2f2f2;
+}
+
 .projectDetails__descriptionInfo {
   margin: 0;
   color: #333;
   font-size: 26px;
   font-weight: 700;
   padding-bottom: 24px;
-  border-bottom: 3px solid #f2f2f2;
+}
+
+.projectDetails__projectEditBtn {
+  color: green;
+  margin-right: 10px;
+  border-color: green;
+}
+
+.projectDetails__projectDeleteBtn {
+  color: red;
+  border-color: red;
 }
 
 .projectDetails__descriptionPost {
